--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-* {
+ * {
     box-sizing: border-box;
 }
 
@@ -21,6 +21,61 @@ h1 {
     color: rgba(73, 8, 73, 0.26);
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.header {
+    width: 100%;
+    height: 65px;
+    margin: 0;
+    background: rgba(255, 255, 255, 0.651);
+    display: flex;
+    box-shadow: inset 0 -2px 1px rgb(0 0 0 / 10%);
+}
+
+.toggle-all {
+    transform: rotate(90deg);
+    padding-top: 15px;
+    color: rgb(189, 189, 189);
+    text-align: center;
+    justify-content: center;
+    width: 65px;
+    font-size: 22px;
+    background: none;
+    display: block;
+}
+.toggle-all:active {
+    color: black;
+}
+
+.newTask {
+    width: 85%;
+    padding: 0;
+    display: block;
+    background: none;
+    border: none;
+    outline: none;
+    line-height: 1.4em;
+    color: #000000ad;
+    font-size: 22px;
+}
+input::placeholder {
+    color: lightgray;
+    font-style: italic;
+}
+
+.view {
+    width: 100%;
+    height: 58px;
+    margin: 0;
+    background: rgba(255, 255, 255, 0.651);
+    display: flex;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
+}
+/*
 .main {
     box-shadow: 0 1px 7px rgba(0, 0, 0, 0.281)
 }
@@ -156,4 +211,4 @@ input::placeholder {
     border: none;
     height: 20px;
     margin: auto 10px auto 40px;
-}
+} */
