--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ ul {
 }
 
 .toggle-all {
+    user-select: none;
     transform: rotate(90deg);
     padding-top: 15px;
     color: rgb(189, 189, 189);
@@ -162,23 +163,26 @@ input::placeholder {
 }
 
 .todo-count {
-    width: 28%;
     height: 20px;
     font-size: 16px;
     color: rgba(65, 65, 65, 0.753);
-    margin: auto auto;
-    padding-left: 20px;
+    margin: auto 0;
+    padding-right: 34px;
+}
+
+.counter {
+    margin: auto 5px auto 20px;
+    height: 20px;
+    color: rgba(65, 65, 65, 0.753);
 }
 
 .filters {
     display: inline;
-    width: 44%;
+    width: 48%;
     height: 20px;
     margin: auto auto;
     text-align: center;
     list-style: none;
-    right: 0;
-    left: 0;
     padding-inline-start: 0px;
 }
 
@@ -215,162 +219,3 @@ input::placeholder {
     margin: auto auto;
     padding: 0;
 }
-
-
-/*
-.main {
-    box-shadow: 0 1px 7px rgba(0, 0, 0, 0.281)
-}
-
-.header {
-    height: 100%;
-    width: 100%;
-    height: 65px;
-    position: relative;
-}
-
-.label-all:bgit efore {
-    box-sizing: border-box;
-    position: absolute;
-    transform: rotate(90deg);
-    content: '❯';
-    font-size: 22px;
-    color: #0000009a;
-    padding: 18px 27px;
-    z-index: 2;
-}
-
-.newTask {
-    position: absolute;
-    line-height: 1.4em;
-    color: #000000ad;
-    width: 100%;
-    height: 65px;
-    padding: 16px 16px 16px 60px;
-    border: none;
-    background: rgba(255, 255, 255, 0.651);
-    box-shadow: inset 0 -2px 1px rgb(0 0 0 / 10%);
-    font-size: 24px;
-    outline: none;
-}
-
-input::placeholder {
-    color: lightgray;
-    font-style: italic;
-    font-size: 22px;
-}
-
-.list {
-    margin: 0;
-    padding: 0;
-}
-
-.view {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.toggle {
-    height: 40px;
-    width: 40px;
-    margin: 10px 10px; 
-}
-
-
-.list li {
-    width: 100%;
-    margin: 0;
-    list-style: none;
-    color: #000000ad;
-    width: 100%;
-    height: 65px;
-    border: none;
-    background: rgba(255, 255, 255, 0.651);
-    font-size: 24px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
-}
-
-.delete {
-    position: absolute;
-    border: none;
-    background: none;
-    top: 0;
-    right: 10px;
-    bottom: 0;
-    width: 40px;
-    height: 40px;
-    margin: auto 0;
-    color: black;
-    font-size: 22px;
-    margin-bottom: 11px;
-    transition: color 0.2s ease-out;
-}
-
-.input {
-    
-}
-
-
-.list li label {
-    padding-top: 18px;
-    position: absolute;
-}
-
-.footer {
-    display: flex;
-    width: 100%;
-    height: 40px;
-    vertical-align: middle;
-}
-
-.footer span {
-    font-size: 16px;
-    color: rgba(65, 65, 65, 0.753);
-    margin: auto auto auto 10px;
-}
-
-.filters {
-    margin: auto auto;
-    list-style: none;
-    right: 0;
-    left: 0;
-    padding-inline-start: 0px;
-    margin-left: 15px;
-    margin-right: 5px;
-}
-
-.filters li {
-    background: none;
-    border-bottom: none;
-    height: 20px;
-}
-
-.filter {
-    display: inline;
-}
-
-.filter a {
-    padding: 3px 8px;
-    text-decoration: none;
-    font-size: 16px;
-    color: rgba(65, 65, 65, 0.753);
-    background: none;
-    margin: auto auto;
-    height: 20px;
-}
-
-.selected {
-    border: 1px solid rgba(73, 8, 73, 0.26);;
-    border-radius: 3px;
-}
-
-
-.clear-completed {
-    font-size: 16px;
-    color: rgba(65, 65, 65, 0.753);
-    cursor: pointer;
-    border: none;
-    height: 20px;
-    margin: auto 10px auto 40px;
-} */
